# lp-lab

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  main.py  pyproject.toml  render.yaml
.cursor/rules/: overview.mdc
.github/instructions/: overview.instructions.md
.rulesync/: overview.md
lp_optimizer/: __init__.py  app.py  config.py
lp_optimizer/ai/: __init__.py  gemini_formulator.py  prompts.py
lp_optimizer/components/: __init__.py  input_panel.py  nl_input_panel.py  results_panel.py  solver_log_panel.py  visualization_panel.py
lp_optimizer/examples/: __init__.py  problems.py
lp_optimizer/solvers/: __init__.py  highs_solver.py  pulp_solver.py
lp_optimizer/utils/: __init__.py  logger.py  parser.py
lp_optimizer/visualization/: __init__.py  plotter.py
tests/: README.md  __init__.py  test_app_integration.py  test_both_solvers.py  test_highs.py  test_solvers.py
